deploy/overlays/production/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-stripprefix
spec:
  stripPrefix:
    prefixes:
    - /auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pb-auth
spec:
  forwardAuth:
    address: http://auth.pocketbase-auth.svc.cluster.local:3000/auth/verify
    authResponseHeaders:
    - X-Auth-User
    - X-Auth-Email
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketbase-auth-auth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: pocketbase-auth-auth-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - pocketbase-auth.levinkeller.de
    secretName: pocketbase-auth-auth-tls
  rules:
  - host: pocketbase-auth.levinkeller.de
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketbase-auth-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: pocketbase-auth-pb-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - pocketbase-auth.levinkeller.de
    secretName: pocketbase-auth-auth-tls
  rules:
  - host: pocketbase-auth.levinkeller.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 3000
